--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "install": "node-gyp-build",
     "prebuildify": "prebuildify --napi --strip"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": "github:UserNobody14/tree-sitter-crystal-walnut",
+  "author": "Ben Sobel",
+  "license": "MIT",
   "dependencies": {
     "node-addon-api": "^7.1.0",
     "node-gyp-build": "^4.8.0"
