--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "tree-sitter-crystalwalnut"
-description = "Crystalwalnut grammar for tree-sitter"
+name = "tree-sitter-cwal"
+description = "Cwal grammar for tree-sitter"
 version = "0.0.1"
 license = "MIT"
 readme = "README.md"
-keywords = ["incremental", "parsing", "tree-sitter", "crystalwalnut"]
+keywords = ["incremental", "parsing", "tree-sitter", "cwal"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-crystalwalnut"
+repository = "https://github.com/tree-sitter/tree-sitter-cwal"
 edition = "2021"
 autoexamples = false
 
