--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tree-sitter-crystal-walnut",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "Crystal walnut grammar",
   "main": "bindings/node",
   "types": "bindings/node",
@@ -41,8 +41,8 @@
   ],
   "tree-sitter": [
     {
-      "scope": "source.crystalwalnut",
-      "injection-regex": "^crystalwalnut$"
+      "scope": "source.cwal",
+      "injection-regex": "^cwal$"
     }
   ]
 }
